--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/tejaktr18/NodeCourse/issues"
   },
-  "homepage": "https://github.com/tejaktr18/NodeCourse#readme"
+  "homepage": "https://github.com/tejaktr18/NodeCourse#readme",
+  "dependencies": {
+    "mongoose": "^6.4.0",
+    "underscore": "^1.13.4"
+  }
 }
